--- a/css/styles.css
+++ b/css/styles.css
@@ -1051,7 +1051,7 @@ a.hire-btn:hover{
     padding: 10px;
 }
 .timeline-post-left .timeline-post:first-child{
-    margin-top: 65px;
+    margin-top: 150px;
 }
 .timeline-post-content-holder{
     padding: 15px;
@@ -1149,6 +1149,7 @@ a.hire-btn:hover{
     color: #7d878f;
     font-size: 16px;
     line-height: 28px;
+    text-align: left;
 }
 .timeline-post span.timeline-duration{
     position: relative;
